--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ body {
 
 li {
     padding: 15px;
+    transition: all 0.25s;
 
 
 }
@@ -27,6 +28,7 @@ li {
 li:hover,
 svg:hover {
     cursor: pointer;
+    background: grey;
 
 }
 
@@ -45,10 +47,16 @@ svg {
 
 }
 
-.currentlyPlayingSong {
+#currentlyPlayingSong {
     padding-bottom: 10px;
-    border: 1px lightgrey solid;
-    border-radius: 10px;
+    
+   
+    font-weight: 900;
+    color: white;
+}
+#currentSong {
+    color: white;
+    font-weight: 900;
 }
 
 progress {
@@ -58,10 +66,11 @@ progress {
    appearance: none;
    }
    progress::-webkit-progress-bar { /*background color */
-       background-color: #000; width: 100%;
+       background-color: white; width: 100%;
     }
     progress::-webkit-progress-value /*bar color */
-     {background-color: red !important;}
+     {background-color: #3b0000 !important;}
 h4 {
     font-weight: 700;
+    color: white;
 }
